Added new files

--- a/dom/index.html
+++ b/dom/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>DOM</h1>
-    <p id="text">Hello World</p>
-    <button id="calculate">Calculate factorial of 100 300.0000 angam</button>
+    <!-- <p id="text">Hello World</p> -->
+    <!-- <button id="calculate">Calculate factorial of 100 300.0000 angam</button> -->
     <div>
       <h2>Shopping List</h2>
       <ul id="list">
